tests/NormalTests/paczka2/big_fuzzy/56030111.err
Error in line 2: Ijp7enFK8v A113 8,2
Error in line 6: 3vpiNEsyu S161 16,1
Error in line 5: Ijp7enFK8v S161 86,8
Error in line 19: PjhE S161 20,8
Error in line 36: PjhE A714 111,3
Error in line 29: A113 A714 31,6
Error in line 32: Ijp7enFK8v A113 63,3
Error in line 45: HhAnRanhhBv A714 13,1
Error in line 43: Ijp7enFK8v S161 77,1
Error in line 42: A113 A113 10,9
Error in line 69: kek7CFVN A113 -5,2
Error in line 67: A113 S161 27,2
Error in line 68: mjkcEB A714 341,9
Error in line 104: HhAnRanhhBv A714 34,9
Error in line 87: kek7CFVN A113 9,8
Error in line 120: mjkcEB A714 25,2
Error in line 137: 3vpiNEsyu A113 9,9
Error in line 154: HhAnRanhhBv S161 97,7
Error in line 163: PjhE A11r 72,1
Error in line 174: 3vpiNEsyu A714 1O7,5
Error in line 161: PjhE A714 83,9
Error in line 169: 3vpiNEsyu A714 59,2
Error in line 192: mjkcEB A113 14,9
Error in line 194: Ijp7enFK8v A113 61,0
Error in line 208: HhAnRanhhBv A113 41,6
Error in line 204: Ijp7enFK8v A113 69,0
Error in line 206: kek7CFVN A714 102,5
Error in line 211: HhAnRanhhBv A113 47,6
Error in line 220: mjkcEB A714 32,8
Error in line 221: mjkcEB A113 39,3
Error in line 222: mjkcEB A714 87,8
Error in line 219: HhAnRanhhBv S161 3,6
Error in line 201: 3vpiNEsyu A113 106,3
